# fine-disregard-of-awkward-facts

./: Cargo.toml  fine-disregard-of-awkward-facts.py  test.txt
src/: lib.rs  main.rs  program.rs  rng.rs  utils.rs
